--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ url: "http://larryzju.github.io" # the base hostname & protocol for your site
 github_username:  larryzju
 
 # Build settings
+
+gems:
+  - jemoji
