--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # General Jekyll Config
 highlighter: rouge
-url: http://larryzju.github.io
+url: https://larryzju.github.io
 lsi: false
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock]
