--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # General Jekyll Config
 highlighter: rouge
-url: https://blog.doobby.io
+url: https://blog.doobby.org
 lsi: false
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock]
